# hft-demo

./: .gitignore  CMakeLists.txt  README.md  apply_hw_tuning.sh  build.sh  deploy.sh
conf/: executor.service  feeder.service  hft_logrotate  ipc.env  irq-affinity.sh  md_feeder.service  observer.service  trader.service  trader_btcusdt.service  trader_ethusdt.service  trading_engine.service
conf/hw_tuning/: hft.slice  irq-affinity.service  non-hft-cpus.conf
conf/hw_tuning/overrides/: executor.conf  feeder.conf  trader_btcusdt.conf  trader_ethusdt.conf
executor/: executor.cpp  executor.hpp  main.cpp
feeder/: binance_client.cpp  binance_client.hpp  feeder.cpp  feeder.hpp  main.cpp  parser.cpp  parser.hpp
lib/: common.hpp  interprocess.hpp  local_order_book.hpp  log_common.cpp  log_common.hpp  log_endl.hpp  logger.cpp  logger.hpp  objects_handler.hpp  ring_buffer.hpp  shared_memory.hpp  trade_flow_window.cpp  trade_flow_window.hpp
lib/binance/: binance_api_client.cpp  binance_api_client.hpp  binance_ws_client.cpp  binance_ws_client.hpp  parser.cpp  parser.hpp
lib/interprocess/: hot_path_logger.cpp  hot_path_logger.hpp  interprocess.hpp  interprocess_meta.hpp  ipc_env.cpp  ipc_env.hpp  ipc_params.cpp  ipc_params.hpp  objects_handler.hpp  ring_buffer.hpp  ring_buffer_common.hpp  ring_buffer_data.hpp  shared_memory.hpp  spmc_ring_buffer.hpp  spsc_ring_buffer.hpp  trader_id.cpp  trader_id.hpp
md_feeder/: CMakeLists.txt  binance_client.cpp  main.cpp  md_feeder.cpp  md_feeder.hpp
observer/: main.cpp  observer.cpp  observer.hpp
scripts/: plot_latency_percentiles.py
tests/: test_buffer.cpp  test_hot_path_logger.cpp  test_local_order_book.cpp  test_objects_handler.cpp  test_parser.cpp  test_ring_buffer.cpp  test_shared_memory.cpp  test_spmc_ring_buffer.cpp  test_spsc_ring_buffer.cpp  test_trade_flow_window.cpp  utils.cpp  utils.hpp
trader/: main.cpp  trader.cpp  trader.hpp
trading_engine/: main.cpp  trading_engine.cpp  trading_engine.hpp
